generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma-client"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum PaymentStatus {
  PENDING
  PROCESSING
  REQUIRES_ACTION
  COMPLETED
  FAILED
  REFUNDED
}

enum PaymentMethod {
  CASH
  CARD
  WALLET
  MOMO
  VNPAY
  VISA
}

enum PaymentProvider {
  STRIPE
  MOCK
  MOMO
  VNPAY
  VISA
  ZALOPAY
}

model Fare {
  id              String    @id @default(uuid())
  rideId          String    @unique
  
  baseFare        Float
  distanceFare    Float
  timeFare        Float
  surgeMultiplier Float     @default(1.0)
  totalFare       Float
  
  distanceKm      Float
  durationMinutes Int
  
  currency        String    @default("VND")
  
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt
}

model Payment {
  id              String        @id @default(uuid())
  rideId          String        @unique
  customerId      String
  driverId        String?
  
  amount          Float
  currency        String        @default("VND")
  
  method          PaymentMethod @default(CASH)
  provider        PaymentProvider @default(MOCK)
  status          PaymentStatus @default(PENDING)
  
  // Transaction details
  transactionId   String?
  paymentIntentId String?
  paymentMethodId String?
  clientSecret    String?
  idempotencyKey  String?
  gatewayResponse String?
  metadata        Json?
  
  // Timestamps
  initiatedAt     DateTime      @default(now())
  completedAt     DateTime?
  failedAt        DateTime?
  refundedAt      DateTime?
  
  failureReason   String?

  // Voucher / discount applied to this payment
  voucherId       String?
  discountAmount  Float         @default(0)   // VND discount granted to customer
  finalAmount     Float?                      // amount actually charged (amount - discountAmount)

  voucher         Voucher?      @relation("PaymentVoucher", fields: [voucherId], references: [id])

  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  
  @@index([customerId, createdAt(sort: Desc)])
  @@index([driverId, createdAt(sort: Desc)])
  @@index([status])
  @@index([idempotencyKey])
}

// Per-trip earnings record for the driver
// Created inside the same transaction as Fare + Payment when a ride completes.
model DriverEarnings {
  id              String   @id @default(uuid())

  // Identifiers
  rideId          String   @unique
  driverId        String

  // Fare components (VND)
  grossFare       Float                      // full fare charged to customer
  commissionRate  Float                      // effective rate, e.g. 0.18
  platformFee     Float                      // grossFare × commissionRate (rounded)

  // Adjustments (VND)
  bonus           Float    @default(0)       // total incentive bonus
  penalty         Float    @default(0)       // total penalty deduction

  // Net result (VND)
  netEarnings     Float                      // grossFare − platformFee + bonus − penalty

  // Payment accounting
  paymentMethod   String                     // CASH | MOMO | VNPAY | …
  driverCollected Boolean  @default(false)   // true = driver collected cash from rider
  cashDebt        Float    @default(0)       // VND driver owes platform (cash rides only)

  // Payout tracking
  isPaid          Boolean  @default(false)
  paidAt          DateTime?

  // JSON breakdown for audit trail
  bonusBreakdown   Json?                     // { peakHour: 15000, tripMilestone: 50000, … }
  penaltyBreakdown Json?                     // { highCancelRate: 3000, … }

  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  @@index([driverId, createdAt(sort: Desc)])
  @@index([driverId, isPaid])
}

// Outbox pattern for reliable event publishing
model OutboxEvent {
  id            String    @id @default(uuid())
  eventType     String
  payload       String    // JSON string
  correlationId String
  
  createdAt     DateTime  @default(now())
  publishedAt   DateTime?
  
  @@index([publishedAt])
}

// ─── Driver Wallet ──────────────────────────────────────────────────────────

enum WalletTransactionType {
  EARN        // Net income credited from an online ride
  COMMISSION  // Platform fee debited for a cash ride
  BONUS       // Incentive reward credited
  WITHDRAW    // Driver withdrawal debited
  REFUND      // Reversal of a previous EARN (online-ride refund)
  TOP_UP      // Driver deposits money into wallet via MoMo/VNPay
}

enum IncentiveRuleType {
  TRIP_COUNT  // Total trips in a calendar day (≥ conditionValue → rewardAmount)
  DISTANCE_KM // Total km driven in a calendar day (≥ conditionValue → rewardAmount)
  PEAK_HOUR   // Per-trip bonus; conditionValue unused (0); always applies during peak
}

// The driver's real-time financial balance.
// balance CAN go negative (cash rides create debt).
// Debt limit check: balance < -200_000 VND → driver cannot accept new rides.
model DriverWallet {
  id        String   @id @default(uuid())
  driverId  String   @unique
  balance   Float    @default(0)   // current balance in VND

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  transactions WalletTransaction[]

  @@index([driverId])
  @@map("driver_wallets")
}

// Immutable ledger entry for every change to a driver's wallet.
model WalletTransaction {
  id           String                @id @default(uuid())
  driverId     String
  type         WalletTransactionType
  amount       Float                 // always a positive number; direction encoded in type
  balanceAfter Float                 // wallet balance snapshot after this transaction
  description  String?
  rideId       String?               // links back to the originating ride (nullable for WITHDRAW/BONUS)

  createdAt    DateTime @default(now())

  wallet DriverWallet @relation(fields: [driverId], references: [driverId])

  @@index([driverId, createdAt(sort: Desc)])
  @@index([rideId])
  @@map("wallet_transactions")
}

// Configurable incentive rules stored in DB (editable by admin).
model IncentiveRule {
  id             String            @id @default(uuid())
  type           IncentiveRuleType
  conditionValue Float             // 10 → 10 trips; 100 → 100 km; 0 → peak-hour (per-trip)
  rewardAmount   Float             // VND bonus
  isActive       Boolean           @default(true)
  description    String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("incentive_rules")
}

// Running totals per driver per calendar day for incentive evaluation.
model DriverDailyStats {
  id             String   @id @default(uuid())
  driverId       String
  date           DateTime @db.Date  // calendar date (UTC)
  tripsCompleted Int      @default(0)
  distanceKm     Float    @default(0)
  peakTrips      Int      @default(0)
  bonusAwarded   Float    @default(0)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([driverId, date])
  @@index([driverId, date(sort: Desc)])
  @@map("driver_daily_stats")
}

// ─── Wallet Top-Up via MoMo / VNPay ──────────────────────────────────────

enum TopUpStatus {
  PENDING    // Payment initiated, waiting for gateway IPN
  COMPLETED  // IPN confirmed success, wallet credited
  FAILED     // IPN confirmed failure or timed out
}

// One record per top-up attempt.  Created when driver initiates payment.
// Confirmed (or failed) by the gateway IPN webhook.
model WalletTopUpOrder {
  id              String      @id @default(uuid())
  driverId        String

  amount          Float                       // VND requested by driver
  provider        String                      // 'MOMO' | 'VNPAY'
  status          TopUpStatus @default(PENDING)

  // IDs sent to / returned by the payment gateway
  orderId         String      @unique         // gateway order ref (used in IPN lookup)
  gatewayTxnId    String?                     // transaction ID from gateway on success
  gatewayResponse String?                     // raw IPN body (JSON string, for audit)

  createdAt       DateTime    @default(now())
  completedAt     DateTime?
  failedAt        DateTime?

  @@index([driverId, createdAt(sort: Desc)])
  @@index([orderId])
  @@map("wallet_topup_orders")
}

// ─── Voucher / Promo System ───────────────────────────────────────────────

enum DiscountType {
  PERCENT // discount_value is a percentage (e.g. 20 = 20 %)
  FIXED   // discount_value is a fixed VND amount
}

enum VoucherAudience {
  ALL_CUSTOMERS
  NEW_CUSTOMERS
  RETURNING_CUSTOMERS
}

// Master voucher catalogue.
model Voucher {
  id            String       @id @default(uuid())
  code          String       @unique
  description   String?
  audienceType  VoucherAudience @default(ALL_CUSTOMERS)

  discountType  DiscountType
  discountValue Float                          // percent (0-100) or flat VND amount
  maxDiscount   Float?                         // cap for PERCENT vouchers (VND)
  minFare       Float        @default(0)       // minimum trip fare to use voucher

  startTime     DateTime
  endTime       DateTime
  usageLimit    Int?                           // total redemptions allowed (null = unlimited)
  perUserLimit  Int          @default(1)       // max times one user can use it

  isActive      Boolean      @default(true)

  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt

  userVouchers  UserVoucher[]
  payments      Payment[]    @relation("PaymentVoucher")

  @@index([code])
  @@index([endTime])
  @@index([audienceType, startTime, endTime])
  @@map("vouchers")
}

// Junction: which vouchers a customer has collected and how many times used.
model UserVoucher {
  id        String   @id @default(uuid())
  userId    String
  voucherId String
  usedCount Int      @default(0)
  savedAt   DateTime @default(now())

  voucher   Voucher  @relation(fields: [voucherId], references: [id])

  @@unique([userId, voucherId])
  @@index([userId])
  @@map("user_vouchers")
}
