erDiagram
    payments {
        UUID id PK
        UUID rideId UK
        UUID customerId
        UUID driverId "nullable"
        FLOAT amount
        ENUM method "CASH|MOMO|VNPAY|CARD|WALLET"
        ENUM status "PENDING|COMPLETED|FAILED|REFUNDED"
        VARCHAR idempotencyKey UK "nullable"
        JSON gatewayResponse "nullable"
        TIMESTAMPTZ createdAt
        TIMESTAMPTZ updatedAt
    }

    driver_earnings {
        UUID id PK
        UUID rideId FK
        UUID driverId
        FLOAT grossFare
        FLOAT commissionRate
        FLOAT platformFee
        FLOAT netEarnings
        FLOAT cashDebt
        FLOAT bonus
        FLOAT voucherDiscount
        BOOL driverCollected
        BOOL isPaid
        TIMESTAMPTZ createdAt
    }

    refund_records {
        UUID id PK
        UUID paymentId FK
        FLOAT amount
        ENUM provider "MOMO|VNPAY"
        VARCHAR transactionId "nullable"
        ENUM status "PENDING|COMPLETED|FAILED"
        VARCHAR reason "nullable"
        TIMESTAMPTZ createdAt
    }

    driver_wallet_payments {
        UUID id PK
        VARCHAR driverId UK
        FLOAT balance
        TIMESTAMPTZ updatedAt
    }

    payments ||--|| driver_earnings : "rideId"
    payments ||--o{ refund_records : "has"
